--- a/frontend/src/app/Home/HomeHero/HomeHero.module.scss
+++ b/frontend/src/app/Home/HomeHero/HomeHero.module.scss
@@ -19,7 +19,6 @@ $transition-duration: 0.5s;
   width: 100vw;
   margin-left: calc(-50vw + 50%);
   position: relative;
-  scroll-snap-align: start;
 }
 
 // Grid container - starts centered, then splits
@@ -133,7 +132,7 @@ $min-hex-clearance: 320px;
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 1;
+  z-index: 50;
 }
 
 // Logo scroll animation is handled via inline styles from JS
@@ -280,7 +279,7 @@ $min-hex-clearance: 320px;
     position: fixed;
     top: 50%;
     left: 50%;
-    z-index: 1;
+    z-index: 50;
   }
 
   .textSection {
@@ -343,7 +342,7 @@ $min-hex-clearance: 320px;
     position: fixed;
     top: 50%;
     left: 50%;
-    z-index: 1;
+    z-index: 50;
   }
 
   .textSection {
